<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main_content"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/AppTheme.AppBarOverlay"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:theme="@style/Uwu.Material3.CollapsingToolbar"
            android:id="@+id/collapsing_toolbar"
            android:background="?attr/colorThemeUwu"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:contentScrim="?attr/colorThemeUwu"
            app:expandedTitleMarginBottom="24.0dip"
            app:expandedTitleMarginEnd="24.0dip"
            app:expandedTitleMarginStart="24.0dip"
            app:expandedTitleTextAppearance="@style/CollapsingToolbarTitle.Expanded"
            app:extraMultilineHeightEnabled="true"
            app:forceApplySystemWindowInsetTop="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:maxLines="3"
            app:scrimAnimationDuration="50"
            app:statusBarScrim="@null"
            app:title="@string/server_tittle"
            app:titleCollapseMode="scale"
            app:toolbarId="@+id/toolbar">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
        <androidx.appcompat.widget.ActionBarContextView
            android:theme="?attr/actionModeTheme"
            android:id="@+id/action_context_bar"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:background="@drawable/uwu_background_lengkung"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.cardview.widget.CardView
            android:paddingTop="16.0dip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16.0dip"
            android:layout_marginBottom="0.0dip"
            android:layout_marginStart="16.0dip"
            android:layout_marginEnd="16.0dip"
            app:cardBackgroundColor="#00000000"
            app:cardCornerRadius="14.0dip"
            app:cardElevation="0.0dip">
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:layout_marginStart="-16.0dip"
                android:layout_marginEnd="-16.0dip"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16.0dip"
                    android:layout_marginEnd="16.0dip">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:background="@drawable/uwu_card_view_corner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0.0dip"
                        android:layout_marginBottom="8.0dip">
                        <EditText
                            android:textSize="17.0sp"
                            android:textColor="?android:textColorPrimary"
                            android:textColorHint="?android:textColorSecondary"
                            android:layout_gravity="start|center|top"
                            android:gravity="top|start"
                            android:id="@+id/etServerInput"
                            android:background="@android:color/transparent"
                            android:padding="12.0dip"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_servers_hint"
                            android:minLines="5"
                            android:overScrollMode="always"
                            android:imeOptions="flagNoExtractUi"
                            android:scrollbars="vertical"
                            android:inputType="textMultiLine" />
                    </LinearLayout>
                    <Button
                        android:textSize="14.0sp"
                        android:textColor="?attr/colorText"
                        android:layout_gravity="center"
                        android:id="@+id/btnLoadServers"
                        android:background="@drawable/uwu_bg_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/load_servers"
                        android:paddingStart="16.0dip"
                        android:paddingEnd="16.0dip"
                        android:layout_marginTop="8.0dip"
                        android:layout_marginBottom="8.0dip"
                        app:backgroundTint="?attr/colorThemeUwu" />
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8.0dip"
                        android:layout_marginBottom="8.0dip"
                        android:weightSum="2.0">
                        <Button
                            android:id="@+id/btnSelectBest"
                            android:background="@drawable/uwu_bg_button"
                            android:textSize="14.0sp"
                            android:textColor="?attr/colorText"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0.0dip"
                            android:layout_marginEnd="8.0dip"
                            android:text="@string/select_best"
                            android:layout_weight="1.0"
                            app:backgroundTint="?attr/colorThemeUwu" />
                        <Button
                            android:id="@+id/btnExport"
                            android:background="@drawable/uwu_bg_button"
                            android:textSize="14.0sp"
                            android:textColor="?attr/colorText"
                            android:layout_width="0.0dip"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8.0dip"
                            android:layout_marginEnd="0.0dip"
                            android:text="@string/export"
                            android:layout_weight="1.0"
                            app:backgroundTint="?attr/colorThemeUwu" />
                    </LinearLayout>
                    <ToggleButton
                        android:id="@+id/btnToggleRefresh"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8.0dip"
                        android:layout_marginBottom="8.0dip"
                        android:textOn="Auto Refresh: ON"
                        android:textOff="Auto Refresh: OFF"
                        android:checked="true" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="0.0dip"
                        android:layout_marginStart="-8.0dip"
                        android:layout_marginEnd="-8.0dip"
                        android:layout_weight="1.0" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.cardview.widget.CardView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>